# a-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  mazegen.py  pyproject.toml
.claude/: settings.local.json
